examples/Passing/Variables/missing_ret.c
int main() {
    int a = 2;
}
