examples/Failing/Variables/fail_increment2.c
int main() {
    int a = 5;
    ++(++a);
}
